Added Headers for Site Security

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,3 +4,12 @@
   
 [build.environment]
   HUGO_VERSION = "0.63.0"
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    Referrer-Policy = "no-referrer"
+    X-Content-Type-Options = "nosniff"
+    Content-Security-Policy = "default-src *; object-src 'none'"
