--- a/netlify.toml
+++ b/netlify.toml
@@ -12,3 +12,8 @@
     X-XSS-Protection = "1; mode=block"
     Referrer-Policy = "no-referrer"
     X-Content-Type-Options = "nosniff"
+
+[[redirects]]
+  from = "/*"
+  to = "/404.html"
+  status = 404
