fix: About page and broken Instagram images
Problem:
About page is outdated.
Instagram embedded images no longer work due to
an Instagram API update.

Solution:
Updated about page.
Removed design section of my portfolio.

Note:
UI designs will be added again in the future.

--- a/config.toml
+++ b/config.toml
@@ -149,7 +149,7 @@ enable = true
 [params.about.cta]
 enable = true
 image = "images/work.svg"
-title = "Websites, Software and Designs"
+title = "Websites, Software and UI Designs"
 description = "Take a look at my work and portfolio"
 [params.about.cta.button]
 enable = true
