--- a/config.toml
+++ b/config.toml
@@ -10,6 +10,9 @@ summaryLength = "10"
 # disqus short name
 disqusShortname = "joshuaboothnz"
 
+# robots.txt
+enableRobotsTXT = true
+
 [markup.goldmark.renderer]
 unsafe= true
 
