fix: improve portfolio layout and image issues
Problems:
The nav looks too small on some tablet screen sizes.
Buttons flow onto a new line on some screen widths.
Images are distored on some screen sizes.

Solutions:
Use the mobile nav for larger tablet screen sizes.

Note:
Also add a horizontal rule to improve the look on mobile.

--- a/data/work.yml
+++ b/data/work.yml
@@ -9,7 +9,7 @@ projects:
         caseStudy: /work/websites/joshua-booth
         repo: https://github.com/Joshua-Booth/website
       # Realive Equipped Youth Manual
-      - name: Realive Equipped Youth Manual
+      - name: Equipped Youth Manual
         image: "/images/work/realiveyouth.jpg"
         link: https://realiveyouth.netlify.com/
         caseStudy: /work/websites/equipped-youth
