--- a/config.toml
+++ b/config.toml
@@ -87,7 +87,7 @@ home = "Home"
 logo = "images/icons/logo.svg"
 # meta data
 author = "Joshua Booth"
-description = "Joshua Booth, full-stack software developer passoniate about web development and design. Here on my personal website you can find all about me, my work and how to contact me."
+description = "Joshua Booth, full-stack software developer passionate about web development and design. Here on my personal website you can find all about me, my work and how to contact me."
 # Google Analytics ID
 googleAnalyticsID = "UA-155146153-1"
 # contact form action
